Fix overflow on main layout not being scrolled (#6258)

--- a/src/renderer/components/cluster-manager/cluster-manager.scss
+++ b/src/renderer/components/cluster-manager/cluster-manager.scss
@@ -19,6 +19,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
   }
 
   .HotbarMenu {
